[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# сборка, цель которой собрать рамер исполняемого файла минимального размера
#[profile.release]
#opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*

[dependencies]
